--- a/AdminTools/AdminTools.csproj
+++ b/AdminTools/AdminTools.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AdminTools.cs" />
+    <Compile Include="AutoSave.cs" />
     <Compile Include="DeathMessage.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Modules\Animals.cs" />
@@ -47,13 +48,14 @@
     <Compile Include="Modules\Annoying.cs" />
     <Compile Include="Modules\Ban.cs" />
     <Compile Include="Modules\Basics.cs" />
-    <Compile Include="Modules\Configs.cs" />
+    <Compile Include="Configs.cs" />
     <Compile Include="Modules\Freezes.cs" />
     <Compile Include="Modules\Homes.cs" />
     <Compile Include="Modules\Items.cs" />
     <Compile Include="Modules\Kicks.cs" />
     <Compile Include="Modules\Kits.cs" />
     <Compile Include="Modules\Locations.cs" />
+    <Compile Include="Modules\Module.cs" />
     <Compile Include="Modules\Players.cs" />
     <Compile Include="Modules\Specials.cs" />
     <Compile Include="Modules\Teleports.cs" />
@@ -62,6 +64,7 @@
     <Compile Include="Modules\Zombies.cs" />
     <Compile Include="PermissionLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectiveEnumerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
