--- a/AdminTools/AdminTools.csproj
+++ b/AdminTools/AdminTools.csproj
@@ -40,28 +40,68 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AdminTools.cs" />
-    <Compile Include="AutoSave.cs" />
-    <Compile Include="DeathMessage.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Modules\Animals.cs" />
-    <Compile Include="Modules\Announces.cs" />
-    <Compile Include="Modules\Annoying.cs" />
-    <Compile Include="Modules\Ban.cs" />
-    <Compile Include="Modules\Basics.cs" />
     <Compile Include="Configs.cs" />
-    <Compile Include="Modules\Freezes.cs" />
-    <Compile Include="Modules\Homes.cs" />
-    <Compile Include="Modules\Items.cs" />
-    <Compile Include="Modules\Kicks.cs" />
-    <Compile Include="Modules\Kits.cs" />
-    <Compile Include="Modules\Locations.cs" />
-    <Compile Include="Modules\Module.cs" />
-    <Compile Include="Modules\Players.cs" />
-    <Compile Include="Modules\Specials.cs" />
-    <Compile Include="Modules\Teleports.cs" />
-    <Compile Include="Modules\Vehicles.cs" />
-    <Compile Include="Modules\Whitelists.cs" />
-    <Compile Include="Modules\Zombies.cs" />
+    <Compile Include="Modules\Animals.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Announces.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Annoying.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\AutoSaves.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Ban.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Basics.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\DeathMessage.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Freezes.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Homes.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Items.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Kicks.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Kits.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Locations.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Module.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Players.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Specials.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Teleports.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Vehicles.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Whitelists.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Modules\Zombies.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="PermissionLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared.cs" />
@@ -87,6 +127,9 @@
       <HintPath>..\References\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Diagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
